tests/toylang/neg/000329_mutation.toylang
program a = { a = (a) if; } .
